Sat Oct 23 01:55:00 1999  Carsten Pfeiffer  <pfeiffer@kde.org>

	* kfiledetaillist.cpp (key): hopefully implemented correct mapping
	from KFileInfo to QListViewItem and back. I had a hard time convincing
	QListView that KFileInfoContents knows best where to insert an item
	Now the detaillist is even usable :)
	Fixed a problem with selection and highlighting
	Disable clicking on listview headers that can't be used for sorting

	* kfileinfocontents.cpp (setSorting): call insertItem() with a correct
	(is it?) index, instead of -1

Thu Oct 21 23:18:54 1999  Carsten Pfeiffer  <pfeiffer@kde.org>

	* kfiledialog.cpp (init): removed "[development only] from tooltip
	(sorry to break the translations, but this HAD to go)

	* don't update anything when leaving the configure-dialog with Cancel

Wed Oct 20 15:07:16 1999  Carsten Pfeiffer  <pfeiffer@kde.org>

	* kfileinfo.cpp,h: implemented KFileInfo::filePath() and fixed 
	KFileInfo::absURL() not being set in some cases
	
	* kdir.cpp: fixed a buglet in the path (double slashes)

	* kfiledetaillist.cpp (KFileDetailList): improved selecting files
	(single click, double click, Return-key)
	but the mapping from QListViewItem to KFileInfo is still quite broken
	
1999-06-09  Woohyun JANG <louis@mizi.co.kr>

	* kdir.cpp: used QString::local8Bit() instead of QString::ascii() 
	for file names and directory names.

	* kfiledialog.cpp: used QStringList instead of QStrIList. 

1999-01-14  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: fixed some GUI problems and moved all default
	configurations into config-kfile.h. 
	Changed some default values, so that users that never looked into
	the config dialog gets a nice suprise with 1.1 ;-)

	* kfiledialog.cpp: changed selectedFile to return decoded path instead
	of encoded one

Thu Jan  7 23:14:39 1999  Carsten Pfeiffer  <pfeiffer@kde.org>

	* kfilesimpleview.cpp (keyPressEvent): fixed segfault on keypress,
	when there were no files at all in the list
